# DatabaseFinalProject

./: Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: filter.rs  form.rs  inputs.rs  main.rs
data/: class-pairs.csv  load.py  original.csv  out.csv  process.py
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
