[package]
name = "dbnd-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
spells = {path="../shared", features=["wasm"]}
web-sys = "0.3.57"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
