[package]
name = "spells"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["dep:serde-wasm-bindgen"]

[dependencies]
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"

[dependencies.serde-wasm-bindgen]
serde-wasm-bindgen = "0.4"
optional=true

